--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-*Audio player with audio visualizing*
+# Audio player with audio visualizing
+
+DOES NOT WORK WHEN ASSETS FOLDER IS DELETED
+
+This work is protected with open MIT licence.
