--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 # Audio player with audio visualizing
 
+![Image](assets/readme_ex.gif)
 DOES NOT WORK WHEN ASSETS FOLDER IS DELETED
 
 This work is protected with open MIT licence.
