--- a/README
+++ b/README
@@ -3,4 +3,6 @@
 ![Image](assets/readme_ex.gif)
 DOES NOT WORK WHEN ASSETS FOLDER IS DELETED
 
+Works with python 3.6 or higher 
+
 This work is protected with open MIT licence.
